--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = [
-    "karva>=0.0.1a1",
+    "pytest>=8.0.0",
+    "pytest-xdist>=3.8.0",
 ]
 
 [build-system]
